[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="GimbalX" type="Spatial" parent="."]

[node name="GimbalY" type="Spatial" parent="GimbalX"]

[node name="Camera" type="ClippedCamera" parent="GimbalX/GimbalY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.56208, 5 )

[node name="DebugInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DebugInterface"]
margin_right = 361.0
margin_bottom = 40.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugInterface/VBoxContainer"]
margin_right = 361.0
margin_bottom = 14.0
text = "Press Esc to toggle mouse captured mode"

[node name="CamSensitivity" type="VBoxContainer" parent="DebugInterface/VBoxContainer"]
margin_top = 39.0
margin_right = 361.0
margin_bottom = 73.0

[node name="HSlider" type="HSlider" parent="DebugInterface/VBoxContainer/CamSensitivity"]
margin_right = 361.0
margin_bottom = 16.0
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugInterface/VBoxContainer/CamSensitivity"]
margin_top = 20.0
margin_right = 361.0
margin_bottom = 34.0
text = "Camera Sensitivity : "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="DebugInterface/VBoxContainer/CamSensitivity/HSlider" to="." method="_on_HSlider_value_changed"]
